Color contrast fix

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -1100,7 +1100,7 @@ ul.checklist {
     }
 
     span {
-      color: #44a485;
+      color: #337B64;
     }
   }
 }
